Behebung Fehler Doku 🐛

--- a/BILZ_MARKUS_solution.html
+++ b/BILZ_MARKUS_solution.html
@@ -25292,7 +25292,7 @@ dtype: int64</pre>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Anwendung des LabelEncoders, um Strings in Integer für Verwendung in Modell zu konvertieren. Bspw. wird '0 = stable' encodiert.</p>
+<p>Anwendung des LabelEncoders, um Strings in Integer für Verwendung in Modell zu konvertieren. Bspw. wird 'unstable = 1' encodiert.</p>
 
 </div>
 </div>
